Started update movie function

--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
 <body>
 <div class="page-container">
     <div class="container">
-        <div class="row">
-            <div class="container displayMovie" data-movies>
-                <table id="movie-list">
-                </table>
-            </div>
-
+        <div id="movieBox" class="row">
+            <div id="movie-list"></div>
+        </div>
             <div class="container addNewMovies">
                 <form>
                     <label for="title">title:</label><br>
