add feat: delete and add movies

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <div class="page-container">
     <div class="container">
         <div id="movieBox" class="row">
-            <div id="movie-list"></div>
+            <div id="movie-list">
+
+            </div>
         </div>
             <div class="container addNewMovies">
                 <form>
@@ -68,10 +70,11 @@
 <script src="js/firebase-config.js"></script>
 
 <!-- Your local JS file to add functions that interact with the database -->
-<script src="js/movies-api.js"></script>
 
+<script src="js/movies-api.js"></script>
 <!-- Your local JS file to add functions that USE your functions from movies-api.js
     and INTERACT with the DOM -->
 <script src="js/index.js"></script>
+
 </body>
 </html>
