--- a/index.html
+++ b/index.html
@@ -15,38 +15,28 @@
 <div class="page-container">
     <div class="container">
         <div id="movieBox" class="row">
-            <div id="movie-list">
+            <div class="movie-list"  id="movie-list">
 
             </div>
         </div>
-            <div class="container addNewMovies">
-                <form>
-                    <label for="title">title:</label><br>
-                    <input type="text" id="title" name="fname"><br>
-                    <label for="year">year:</label><br>
-                    <input type="text" id="year" name="lname"><br>
-                    <label for="director">director:</label><br>
-                    <input type="text" id="director" name="fname"><br>
-                    <label for="rating">rating:</label><br>
-                    <input type="text" id="rating" name="fname"><br>
-                    <label for="runtime">runtime:</label><br>
-                    <input type="text" id="runtime" name="fname"><br>
-                    <label for="genre">genre:</label><br>
-                    <input type="text" id="genre" name="fname"><br>
-                    <label for="actors">actors:</label><br>
-                    <input type="text" id="actors" name="fname"><br>
-                    <button id="addMovies-btn">Add Movies</button>
-                </form>
-            </div>
-
-
-
-
-<!--button to delete-->
-
-<!--button to update-->
-
-
+        <div class="container addNewMovies">
+            <form>
+                <label for="title">title:</label><br>
+                <input type="text" id="title" name="fname"><br>
+                <label for="year">year:</label><br>
+                <input type="text" id="year" name="lname"><br>
+                <label for="director">director:</label><br>
+                <input type="text" id="director" name="fname"><br>
+                <label for="rating">rating:</label><br>
+                <input type="text" id="rating" name="fname"><br>
+                <label for="runtime">runtime:</label><br>
+                <input type="text" id="runtime" name="fname"><br>
+                <label for="genre">genre:</label><br>
+                <input type="text" id="genre" name="fname"><br>
+                <label for="actors">actors:</label><br>
+                <input type="text" id="actors" name="fname"><br>
+                <button id="addMovies-btn">Add Movies</button>
+            </form>
         </div>
     </div>
 </div>
