working on update movies drop

--- a/index.html
+++ b/index.html
@@ -19,24 +19,43 @@
 
             </div>
         </div>
-        <div class="container addNewMovies">
-            <form>
-                <label for="title">title:</label><br>
-                <input type="text" id="title" name="fname"><br>
-                <label for="year">year:</label><br>
-                <input type="text" id="year" name="lname"><br>
-                <label for="director">director:</label><br>
-                <input type="text" id="director" name="fname"><br>
-                <label for="rating">rating:</label><br>
-                <input type="text" id="rating" name="fname"><br>
-                <label for="runtime">runtime:</label><br>
-                <input type="text" id="runtime" name="fname"><br>
-                <label for="genre">genre:</label><br>
-                <input type="text" id="genre" name="fname"><br>
-                <label for="actors">actors:</label><br>
-                <input type="text" id="actors" name="fname"><br>
-                <button id="addMovies-btn">Add Movies</button>
-            </form>
+
+        <div>
+            <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapse" role="button" aria-expanded="false" aria-controls="multiCollapseExample">Add Movie</a>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapse">
+                    <div class="card card-body">
+                        <div class="container addNewMovies">
+                            <form>
+                                <label for="title">title:</label><br>
+                                <input type="text" id="title" name="fname"><br>
+
+                                <label for="year">year:</label><br>
+                                <input type="text" id="year" name="lname"><br>
+
+                                <label for="director">director:</label><br>
+                                <input type="text" id="director" name="fname"><br>
+
+                                <label for="rating">rating:</label><br>
+                                <input type="text" id="rating" name="fname"><br>
+
+                                <label for="runtime">runtime:</label><br>
+                                <input type="text" id="runtime" name="fname"><br>
+
+                                <label for="genre">genre:</label><br>
+                                <input type="text" id="genre" name="fname"><br>
+
+                                <label for="actors">actors:</label><br>
+                                <input type="text" id="actors" name="fname"><br>
+
+                                <button id="addMovies-btn">Add Movies</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
