--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
     </div>
 </div>
 
+<div class="container">
+    <form id="sortMovies">
+        <label for="sortInput">Sort by:</label>
+        <select name="sortBy" id="sortInput">
+            <option value="Select">Select</option>
+            <option value="title">Title</option>
+            <option value="year">Year</option>
+        </select>
+        <button id="sortBtn">Sort</button>
+    </form>
+</div>
 
 
 <!--JQuery-->
