--- a/index.html
+++ b/index.html
@@ -4,97 +4,92 @@
     <meta charset="UTF-8">
     <title>Movies App</title>
 
-    <!--css-->
+    <!-------- css -------->
     <link rel="stylesheet" href="css/movies.css">
 
-    <!--bootstrap-->
+    <!-------- bootstrap -------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
 </head>
 <body>
-<div class="page-container">
-    <div class="container">
+    <div class="page-container">
+        <!-------- Movie Header -------->
+        <header>Movie App</header>
 
-<!--Displayed Movie list-->
-        <div id="movieBox" class="row">
-            <div class="movie-list"  id="movie-list"></div>
-        </div>
-<!--Add Movie Function-->
-        <div>
-            <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapse" role="button" aria-expanded="false" aria-controls="multiCollapseExample">Add Movie</a>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="collapse multi-collapse" id="multiCollapse">
-                    <div class="card card-body">
-                        <div class="container addNewMovies">
-                            <form id="newMovieForm">
-                                <label for="title">title:</label><br>
-                                <input type="text" id="title"><br>
+        <!-------- Displayed Movie list -------->
+        <div class="container">
+            <div id="movieBox" class="row">
+                <div class="movie-list"  id="movie-list"></div>
+            </div>
 
-                                <label for="year">year:</label><br>
-                                <input type="text" id="year"><br>
+            <!-------- Add Movie -------->
+            <div>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapse" role="button" aria-expanded="false" aria-controls="multiCollapseExample">Add Movie</a>
+            </div>
+            <div class="collapse multi-collapse" id="multiCollapse">
+                <div class="card card-body" id="addMovies">
+                    <div class="container addNewMovies">
+                        <form id="newMovieForm">
+                            <label for="title">title:</label><br>
+                            <input type="text" id="title"><br>
+                            <label for="year">year:</label><br>
+                            <input type="text" id="year"><br>
+                            <label for="director">director:</label><br>
+                            <input type="text" id="director"><br>
+                            <label for="rating">rating:</label><br>
+                            <input type="text" id="rating"><br>
+                            <label for="runtime">runtime:</label><br>
+                            <input type="text" id="runtime"><br>
+                            <label for="genre">genre:</label><br>
+                            <input type="text" id="genre"><br>
+                            <label for="actors">actors:</label><br>
+                            <input type="text" id="actors"><br>
 
-                                <label for="director">director:</label><br>
-                                <input type="text" id="director"><br>
+                            <!--------- Add/Clear Movies Button --------->
+                            <button id="addMovies-btn">Add Movies</button>
+                            <button id="clearMovies-btn">Clear</button>
+                        </form>
+                    </div>
 
-                                <label for="rating">rating:</label><br>
-                                <input type="text" id="rating"><br>
+                    <!--------- Sort Movies Button --------->
+                    <div class="container">
+                        <form id="sortMovies">
+                            <label for="sortInput">Sort by:</label>
+                            <select name="sortBy" id="sortInput">
+                                <option value="Select">Select</option>
+                                <option value="title">Title</option>
+                                <option value="year">Year</option>
+                            </select>
 
-                                <label for="runtime">runtime:</label><br>
-                                <input type="text" id="runtime"><br>
-
-                                <label for="genre">genre:</label><br>
-                                <input type="text" id="genre"><br>
-
-                                <label for="actors">actors:</label><br>
-                                <input type="text" id="actors"><br>
-
-                                <button id="addMovies-btn">Add Movies</button>
-                                <button id="clearMovies-btn">Clear</button>
-                            </form>
-                        </div>
+                            <!--------- Sort Button --------->
+                            <button id="sortBtn">Sort</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="container">
-    <form id="sortMovies">
-        <label for="sortInput">Sort by:</label>
-        <select name="sortBy" id="sortInput">
-            <option value="Select">Select</option>
-            <option value="title">Title</option>
-            <option value="year">Year</option>
-        </select>
-        <button id="sortBtn">Sort</button>
-    </form>
-</div>
-
-
-<!--JQuery-->
+<!-------- JQuery -------->
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
 
-<!--Bootstrap-->
+<!-------- Bootstrap -------->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-<!-- The core Firebase JS SDK and Databse library -->
+<!-------- Firebase JS SDK and Databse library -------->
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-firestore.js"></script>
 
-<!-- A local JS file to store the firebase API Key. WARNING: Do not commit this file -->
+<!-------- API Key -------->
 <script src="js/keys.js"></script>
 
-<!-- Utilities and higher level functions to simplify database fetches -->
+<!-------- Utilities JS -------->
 <script src="js/firebase-config.js"></script>
 
-<!-- Your local JS file to add functions that interact with the database -->
-
+<!-------- API JS file  -------->
 <script src="js/movies-api.js"></script>
-<!-- Your local JS file to add functions that USE your functions from movies-api.js
-    and INTERACT with the DOM -->
+
+<!-------- DOM JS file  -------->
 <script src="js/index.js"></script>
 
 </body>
